Fix attribute mapping for image inputs by always mapping the attributes that work on image inputs.  b=214077  r+sr=bzbarsky  a=brendan